<resources>
    <string name="app_name">BasketballCoach</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="loginbutton">Login</string>
    <string name="registerbutton">Registrarse</string>
    <string name="aboutusbutton">About us</string>
    <string name="repiteContraseña">Repite contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="dorsal">Dorsal</string>
    <string name="altura">Altura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>